# pipe

dockers/piped-base/: Dockerfile
manifests/pipecd/: Chart.yaml  values.yaml
pkg/app/piped/cloudprovider/kubernetes/: kubectl.go  kubernetes.go
pkg/app/piped/cloudprovider/lambda/providertest/: BUILD.bazel  mock.go
pkg/app/piped/executor/kubernetes/: kubernetes.go  primary.go  traffic.go
pkg/app/piped/executor/lambda/: BUILD.bazel  lambda_test.go
pkg/app/web/: package.json
