load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "deploy.go",
        "lambda.go",
    ],
    importpath = "github.com/pipe-cd/pipe/pkg/app/piped/executor/lambda",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/app/piped/cloudprovider/lambda:go_default_library",
        "//pkg/app/piped/deploysource:go_default_library",
        "//pkg/app/piped/executor:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/model:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["lambda_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_golang_mock//gomock:go_default_library"],
)
